--- a/week3/css/style.css
+++ b/week3/css/style.css
@@ -25,6 +25,17 @@ line-height: 25px;
 
 color: #404040;
 }
+.burger__menu{
+    
+    width: 40px;
+    height: 30px;
+    display: none;
+    z-index: 5;
+}
+.burger__menu img{
+    width: 100%;
+    height: 100%;
+}
 .wrapper{
     display: flex;
     /* justify-content: space-between; */
@@ -50,6 +61,7 @@ color: #404040;
 .content__topside{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .content__login-icons{
     display: flex;
@@ -458,7 +470,21 @@ color: #696969;
     }
 }
 @media screen and (max-width:700px){
+   .burger__menu{
+       display: block;
+   }
+   .leftside{
+       display: none;
+   }
    td{
        padding:0px;
    }
+   
 }
+/* @media screen and (max-width:400px){
+    td{
+        padding:0px;
+    }
+ 
+ } */
+
